--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,21 @@
 [extract_messages]
 keywords = translate isPlural
 add_comments = TRANSLATORS:
-output_file = i18n/ckanext-mapactionevent.pot
+output_file = i18n/ckanext-locationgroup.pot
 width = 80
 
 [init_catalog]
-domain = ckanext-mapactionevent
-input_file = i18n/ckanext-mapactionevent.pot
+domain = ckanext-locationgroup
+input_file = i18n/ckanext-locationgroup.pot
 output_dir = i18n
 
 [update_catalog]
-domain = ckanext-mapactionevent
-input_file = i18n/ckanext-mapactionevent.pot
+domain = ckanext-locationgroup
+input_file = i18n/ckanext-locationgroup.pot
 output_dir = i18n
 previous = true
 
 [compile_catalog]
-domain = ckanext-mapactionevent
+domain = ckanext-locationgroup
 directory = i18n
 statistics = true
